# pipeline-for-testing

./: .agent  .gitignore  AGENTS.md  README.md  input-data  prompt.txt  pyproject.toml
.agents/: coordinator.agent  stage_reviewer.agent  stage_worker.agent
.codex/: 13TeV25_details.md  knowledge.md  paper_results.md
.codex/skills/: INDEX.md
.codex/skills/atlas-plot-style/: SKILL.md
.codex/skills/hep-analysis-env-setup/: SKILL.md
.codex/skills/hep-analysis-evaluation-scorecard/: SKILL.md
.codex/skills/hep-analysis-inversions/: SKILL.md
.codex/skills/hep-analysis-meta-pipeline/: SKILL.md
.codex/skills/hep-analysis-pipelines/: SKILL.md
.codex/skills/hep-analysis-reviewers/: SKILL.md
.codex/skills/hep-analysis-tool-wrappers/: SKILL.md
.codex/skills/hep-final-quality-review/: SKILL.md
.codex/skills/hep-meta-first/: SKILL.md
.codex/skills/hep-pipeline-skill-compliance-audit/: SKILL.md
.codex/skills/hep-root-runtime-repair/: SKILL.md
.codex/skills/multiagent-hep-coordinating-analysis/: SKILL.md
.codex/skills/multiagent-hep-coordination/: SKILL.md
.codex/skills/plotting/: SKILL.md
analysis/: Higgs-to-diphoton.json  __init__.py  analysis.json  analysis.summary.json  cli.py  leptons-bjet-vlq-search.json  pipeline.py  preflight.py  regions.yaml  vlq_pipeline.py
analysis/plotting/: blinded_regions.py
analysis/report/: artifacts.py  make_report.py
analysis/samples/: metadata.py
analysis/stats/: fit.py  models.py  significance.py
input-data/: MC  data
tests/: test_reporting_contracts.py  test_summary.py  test_vlq_contracts.py
(+72 files in other folders)
