[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlq-analysis-pipeline"
version = "0.1.0"
description = "Standalone same-charge leptons plus b-jets VLQ-style pipeline for ATLAS open data"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "haichenwangberkeley", email = "haichenwang@berkeley.edu" },
]
dependencies = [
  "awkward>=2",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scipy>=1.11",
  "uproot>=5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
vlq-analysis = "analysis.cli:main"

[tool.setuptools]
include-package-data = true
packages = [
  "analysis",
  "analysis.samples",
]

[tool.setuptools.package-data]
analysis = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
